add deleteAccount function
