# swagger.yaml
@@ -490,3 +490,29 @@ paths:
                   massage:
                     type: string
                     example: "Password has been successfully updated"
+
+  /user/delete/account:
+    delete:
+      tags:
+        - user
+      summary: delete user account
+      description: delete user account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                password:
+                  type: string
+                  example: "user current password"
+      responses:
+        200:
+          description: "Account has been successfully deleted"
+          content:
+            application/json:
+              schema:
+                properties:
+                  massage:
+                    type: string
+                    example: "Account has been successfully deleted"
